--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  height: 100vh;
 }
 
 .App-logo {
@@ -16,12 +17,18 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.car-details {
+  height: 100vh;
+  display: flex;
+  width: 100vw;
+  justify-content: center;
 }
 
 .App-link {
